[FIX] html_editor: user-selectable buttons in navbar
Steps:
- In the website builder, have a navbar with an empty space next to a
non-editable button (e.g. the shopping cart or the search button).
- Click on the empty space next to the button.

As a result the whole content of the navbar gets selected (this might
not be visible in Chrome), and the floating toolbar opens.

It is not clear why the resulting selection is produced (nor why it is
not visible on Chrome), but it is not desirable to have the toolbar
opened when clicking on the navbar. But making the non-editable buttons
also not user-selectable seems to solve the issue.

task-4936596

closes odoo/odoo#218672

X-original-commit: a97fe54e0a115c8c89de9c320e50f336cf9c568c

--- a/addons/html_editor/static/src/main/link/link.scss
+++ b/addons/html_editor/static/src/main/link/link.scss
@@ -6,9 +6,11 @@
 }
 
 .odoo-editor-editable {
-    .btn {
-        user-select: auto;
-        cursor: text;
+    &[contenteditable=true], [contenteditable=true] {
+        &.btn, .btn {
+            user-select: auto;
+            cursor: text;
+        }
     }
 
     [contenteditable=false] .btn {
